--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@lucky-canvas/vue": "^0.1.6",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "lucky-canvas": "^1.7.13",
     "postcss-px-to-viewport": "^1.1.1",
+    "qs": "^6.10.2",
     "vant": "^2.12.37",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
