--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@lucky-canvas/vue": "^0.1.6",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "cube-ui": "^1.12.47",
     "lucky-canvas": "^1.7.13",
     "postcss-px-to-viewport": "^1.1.1",
     "qs": "^6.10.2",
+    "stylus": "^0.56.0",
+    "stylus-loader": "3.0.2",
     "vant": "^2.12.37",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -25,6 +28,15 @@
     "@vue/cli-service": "~4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-px-to-viewport": "^0.0.3",
+    "stylus": "^0.54.5",
+    "vue-cli-plugin-cube-ui": "~0.2.5",
     "vue-template-compiler": "^2.6.11"
+  },
+  "transformModules": {
+    "cube-ui": {
+      "transform": "cube-ui/src/modules/${member}",
+      "kebabCase": true
+    }
   }
 }
